Layout: fix spacing issues

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,9 +12,6 @@ body {
 	background-blend-mode: overlay;
 	color: #afd6f6;
 	font-family: 'IBM Plex Sans', sans-serif;
-
-	@apply min-w-full;
-	@apply min-h-screen;
 }
 
 .nav-button-active {
